--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,1 +1,9 @@
 /* Write your CSS here */
+/* Write your CSS here */
+
+.notfound-text {
+  font-family: Bree serif;
+  font-size: 40px;
+  color: #ffffff;
+  font-weight: bold;
+}
