--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -1,1 +1,45 @@
 /* Write your CSS here */
+/* Write your CSS here */
+
+.app-match-card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 250px;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: #1e293b;
+  border-radius: 10px;
+  margin: 20px;
+  text-align: center;
+}
+
+.match-card-image {
+  height: 80px;
+  background-size: cover;
+}
+
+.match-card-heading {
+  font-family: Bree Serif;
+  font-size: 30px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.match-card-result {
+  font-family: Bree Serif;
+  font-size: 20px;
+  color: #ffffff;
+}
+
+.match-won {
+  font-family: Bree Serif;
+  font-size: 20px;
+  color: #18ed66;
+}
+
+.match-lose {
+  font-family: Bree Serif;
+  font-size: 20px;
+  color: #e31a1a;
+}
