--- a/src/components/LatestMatch/index.css
+++ b/src/components/LatestMatch/index.css
@@ -1,1 +1,62 @@
 /* Write your CSS here */
+.latest-match-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80vw;
+  background-color: #1e293b;
+  padding: 20px;
+}
+
+.latest-match-name {
+  font-family: Bree Serif;
+  font-size: 30px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.latest-match-date {
+  font-family: Bree Serif;
+  font-size: 25px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.latest-match-venue {
+  font-family: Bree Serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.latest-match-result {
+  font-family: Bree Serif;
+  font-size: 15px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.oponent-team-logo {
+  height: 150px;
+  background-size: cover;
+}
+
+.first-innings-text {
+  font-family: Bree Serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.first-innings-team {
+  font-family: Bree Serif;
+  font-size: 14px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.match-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
