--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -1,1 +1,29 @@
 /* Write your CSS here */
+.team-matches-container {
+  background-image: linear-gradient(to bottom, #d91c1f, #1e293b);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.team-match-image {
+  width: 80vw;
+  height: 40vh;
+  background-size: cover;
+  margin-bottom: 15px;
+}
+
+.latest-matches-text {
+  font-family: Bree Serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.recent-matches-container {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
