--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,9 +1,17 @@
 /* Write your CSS here */
-/* Write your CSS here */
-
 .notfound-text {
   font-family: Bree serif;
   font-size: 40px;
   color: #ffffff;
   font-weight: bold;
+}
+
+.notfound-container {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
+  height: 100vh;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
